# Thesis

./: .env.example  .gitignore  README.md  main.py  oop_data_difficulty.jsonl  pyproject.toml  pytest.ini  requirements.txt
configs/: participium.example.yaml
graph/: experiment_logger.py  graph.py  helpers.py  models.py  states.py
graph/nodes/advance_to_next_model/: __init__.py  advance_to_next_model_node.py
graph/nodes/best_code_picker/: __init__.py  best_code_picker_edge.py  (+1 more)
prompts/evaluation/: feedback_manager.md  metric_evaluator.md
prompts/generation/: adversarial_agent.md  edge_case_agent.md  happy_path_agent.md  test_writer_agent.md
prompts/planning/: api_understanding.md  requirements_analyst.md  test_strategy_planner.md
sampling/: .env.gianluca.all.same-model-different-temperatures  .env.gianluca.all.same-temperature-different-models  .env.gianluca.all.single-model  .env.gianluca.passing.same-model-different-temperatures  .env.gianluca.passing.same-temperature-different-models  .env.gianluca.passing.single-model  .env.simone.all.same-model-different-temperatures  .env.simone.all.same-temperature-different-models  .env.simone.all.single-model  .env.simone.passing.same-model-different-temperatures  .env.simone.passing.same-temperature-different-models  .env.simone.passing.single-model
src/thesis_rest_tester/: __init__.py  cli.py  config.py  logging_utils.py  orchestrator.py
tests/: test_agent_json_parsing.py  test_config.py  test_openapi_loader.py  test_orchestrator_dry_run.py  test_planning_quality.py  test_requirements_loader.py
(+60 files in other folders)
