[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-rest-tester"
version = "0.1.0"
description = "LLM-assisted black-box REST API test planning for the Participium thesis project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.31",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "pypdf>=4.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
